--- a/charts/forms-flow-web/templates/service.yaml
+++ b/charts/forms-flow-web/templates/service.yaml
@@ -1,17 +1,14 @@
+---
 apiVersion: v1
 kind: Service
 metadata:
-  annotations: null
-  creationTimestamp: null
   labels:
-    app: {{ .Values.app_name }}
+    app: {{ .Chart.Name }}
   name: {{ .Chart.Name }}
 spec:
   ports:
-  - name: "8080"
-    port: 8080
-    targetPort: 8080
+  - name: {{ .Chart.Name }}
+    port: {{.Values.ingress.port}}
+    targetPort: {{.Values.ingress.port}}
   selector:
-    app: {{ .Values.app_name }}
-status:
-  loadBalancer: {}
+    app: {{ .Chart.Name }}
