--- a/charts/forms-flow-api/values.yaml
+++ b/charts/forms-flow-api/values.yaml
@@ -18,7 +18,7 @@ ingress:
 image:
   registry: docker.io
   repository: formsflow/forms-flow-webapi
-  tag: latest #The image tag to pull from
+  tag: v4.0.6-alpha #The image tag to pull from
 
 postgresql:
   auth:
