--- a/charts/forms-flow-bpm/values.yaml
+++ b/charts/forms-flow-bpm/values.yaml
@@ -30,7 +30,7 @@ camunda:
 image:
   registry: docker.io
   repository: formsflow/forms-flow-bpm
-  tag: latest #The image tag to pull from
+  tag: v4.0.6-alpha #The image tag to pull from
 
 formsflow:
   configmap: forms-flow-ai # name of formsflow.ai configmap
