--- a/charts/forms-flow-forms/values.yaml
+++ b/charts/forms-flow-forms/values.yaml
@@ -8,7 +8,7 @@ formsflow:
 image:
   registry: docker.io
   repository: formsflow/forms-flow-forms
-  tag: latest #The image tag to pull from
+  tag: v4.0.6-alpha #The image tag to pull from
 
 ingress: 
   enabled: true # create an ingress for this component 
