--- a/charts/forms-flow-forms/templates/deployment.yaml
+++ b/charts/forms-flow-forms/templates/deployment.yaml
@@ -20,8 +20,7 @@ spec:
         app: {{ .Chart.Name }}
     spec:
       containers:
-      - envFrom:
-        env:
+      - env:
         - name: NODE_CONFIG
           valueFrom:
             configMapKeyRef:
