--- a/charts/forms-flow-web/values.yaml
+++ b/charts/forms-flow-web/values.yaml
@@ -23,5 +23,5 @@ image:
 kc_config_path: /usr/share/nginx/html/config/kc
 config_path: /usr/share/nginx/html/config/
 redash_secret_key: c2FY1BNNNGQP1sjaKGNIu8wXai1irSKqRIv3h1nb 
-web_api_url: https://webapi-{{ .Release.Namespace }}.apps.devops.aot-technologies.com
-web_url: web-{{ .Release.Namespace }}.apps.devops.aot-technologies.com
+web_api_url: https://forms-flow-api-{{ .Release.Namespace }}.apps.devops.aot-technologies.com
+web_url: forms-flow-web-{{ .Release.Namespace }}.apps.devops.aot-technologies.com
