--- a/charts/forms-flow-bpm/templates/deployment.yaml
+++ b/charts/forms-flow-bpm/templates/deployment.yaml
@@ -93,6 +93,27 @@ spec:
             configMapKeyRef:
               key: DATA_ANALYSIS_URL
               name: "{{ .Values.formsflow.configmap }}"
+        - name: KEYCLOAK_ENABLE_CLIENT_AUTH
+          valueFrom:
+            configMapKeyRef:
+              key: KEYCLOAK_ENABLE_CLIENT_AUTH
+              name: "{{ .Values.formsflow.configmap }}"
+        - name: KEYCLOAK_WEB_CLIENTID
+          valueFrom:
+            secretKeyRef:
+              key: WEB_CLIENTID
+              name: "{{ .Values.formsflow.secret }}"
+        - name: MULTI_TENANCY_ENABLED
+          valueFrom:
+            configMapKeyRef:
+              key: MULTI_TENANCY_ENABLED
+              name: "{{ .Values.formsflow.configmap }}"
+        - name: FORMSFLOW_ADMIN_URL
+          valueFrom:
+            configMapKeyRef:
+              key: FORMSFLOW_ADMIN_URL
+              name: "{{ .Values.formsflow.configmap }}"
+
         image: "{{ .Values.image.registry }}/{{ .Values.image.repository }}:{{ .Values.image.tag }}"
         imagePullPolicy: Always
         livenessProbe:
