Changes for admin URL

--- a/charts/forms-flow-web/templates/configmap.yaml
+++ b/charts/forms-flow-web/templates/configmap.yaml
@@ -70,4 +70,7 @@ data:
         "REACT_APP_APPLICATION_NAME": "${REACT_APP_APPLICATION_NAME}",
         "REACT_APP_USER_ACCESS_PERMISSIONS": "${REACT_APP_USER_ACCESS_PERMISSIONS}",
         "REACT_APP_FORMIO_JWT_SECRET": "${REACT_APP_FORMIO_JWT_SECRET}",
+        "REACT_APP_MT_ADMIN_BASE_URL": "${REACT_APP_MT_ADMIN_BASE_URL}",
+        "REACT_APP_MT_ADMIN_BASE_URL_VERSION": "v1"
+
       }
