--- a/charts/forms-flow-mongodb/values.yaml
+++ b/charts/forms-flow-mongodb/values.yaml
@@ -1,11 +1,11 @@
 ---
 mongodb:
   arbiter: 
+    enabled: false
     containerSecurityContext:
       enabled: false
     podSecurityContext:
       enabled: false
-  architecture: replicaset
   auth:
     databases: 
       - formsflow 
@@ -22,3 +22,6 @@ mongodb:
   replicaSetName: forms-flow-mongodb
   podSecurityContext:
     enabled: false
+  useStatefulSet : false
+  architecture: standalone
+  
