--- a/charts/forms-flow-analytics/Chart.yaml
+++ b/charts/forms-flow-analytics/Chart.yaml
@@ -4,8 +4,8 @@ dependencies:
   - name: redis-exporter
     version: 1.0.0
   - name: postgresql
-    repository: https://charts.bitnami.com/bitnami
-    version: 11.1.20
+    repository: https://charts.bitnami.com/bitnami/postgresql
+    version: 11.6.15
 name: forms-flow-analytics
 tags: forms-flow-analytics
 version: v1.0.0
