--- a/charts/forms-flow-analytics/values.yaml
+++ b/charts/forms-flow-analytics/values.yaml
@@ -1,4 +1,4 @@
-Domain: "apps.devops.aot-technologies.com"
+Domain: "apps.gitops.aot-technologies.com"
 ingress: 
   enabled: true # create an ingress for this component 
   port: 5000
@@ -18,8 +18,7 @@ postgresql:
     containerSecurityContext:
       enabled: false
     persistence:
-      mountPath: /var/lib/pgsql/data
-      storageClass: nfs-client 
+      storageClass: ""
       size: 1Gi 
     podSecurityContext:
       enabled: false
