--- a/charts/forms-flow-bpm/Chart.yaml
+++ b/charts/forms-flow-bpm/Chart.yaml
@@ -2,7 +2,7 @@
 apiVersion: v2
 dependencies:
   - name: postgresql
-    repository: https://charts.bitnami.com/bitnami
-    version: 11.1.20
+    repository: https://charts.bitnami.com/bitnami/postgresql
+    version: 11.6.15
 name: forms-flow-bpm
 version: v1.0.0
