--- a/charts/forms-flow-bpm/values.yaml
+++ b/charts/forms-flow-bpm/values.yaml
@@ -1,5 +1,5 @@
 ---
-Domain: "apps.devops.aot-technologies.com"
+Domain: "apps.gitops.aot-technologies.com"
 camunda:
   analytics:
     database: forms-flow-analytics-postgresql
@@ -26,7 +26,7 @@ camunda:
     url: "jdbc:postgresql://${CAMUNDA_DATABASE_SERVICE_NAME}:${CAMUNDA_DATABASE_PORT}/${CAMUNDA_DATABASE_NAME}"
   websocket:
     messageType: TASK_EVENT #WEBSOCKET_MESSAGE_TYPE
-    securityOrigin: "https://*.devops.aot-technologies.com" #WEBSOCKET_SECURITY_ORIGIN
+    securityOrigin: "https://*.gitops.aot-technologies.com" #WEBSOCKET_SECURITY_ORIGIN
 
 image:
   registry: docker.io
@@ -63,8 +63,7 @@ postgresql:
     containerSecurityContext:
       enabled: false
     persistence:
-      mountPath: /var/lib/pgsql/data
-      storageClass: nfs-client 
+      storageClass: "" 
       size: 1Gi 
     podSecurityContext:
       enabled: false
