--- a/charts/forms-flow-web/values.yaml
+++ b/charts/forms-flow-web/values.yaml
@@ -1,5 +1,5 @@
 ---
-Domain: "apps.devops.aot-technologies.com"
+Domain: "apps.gitops.aot-technologies.com"
 analytics:
   configmap: forms-flow-analytics # name of formsflow analytics configmap
   secret: forms-flow-analytics #name of formsflow analytics secret 
@@ -22,6 +22,3 @@ image:
   tag: latest
 kc_config_path: /usr/share/nginx/html/config/kc
 config_path: /usr/share/nginx/html/config/
-redash_secret_key: c2FY1BNNNGQP1sjaKGNIu8wXai1irSKqRIv3h1nb 
-web_api_url: https://webapi-{{ .Release.Namespace }}.apps.devops.aot-technologies.com
-web_url: web-{{ .Release.Namespace }}.apps.devops.aot-technologies.com
