--- a/charts/forms-flow-admin/Chart.yaml
+++ b/charts/forms-flow-admin/Chart.yaml
@@ -2,8 +2,8 @@
 apiVersion: v2
 dependencies:
   - name: postgresql
-    repository: https://charts.bitnami.com/bitnami
-    version: 11.1.20
+    repository: https://charts.bitnami.com/bitnami/postgresql
+    version: 11.6.15
 name: forms-flow-admin
 tags: forms-flow-admin
 version: v1.0.0
