--- a/charts/forms-flow-admin/values.yaml
+++ b/charts/forms-flow-admin/values.yaml
@@ -18,7 +18,7 @@ ingress:
 image:
   registry: docker.io
   repository: formsflow/forms-flow-ai-admin
-  tag: v1.0.0-alpha #The image tag to pull from
+  tag: v5.0.0-alpha #The image tag to pull from
 
 postgresql:
   auth:
@@ -35,8 +35,7 @@ postgresql:
     containerSecurityContext:
       enabled: false
     persistence:
-      mountPath: /var/lib/pgsql/data
-      size: 1Gi 
+      storageClass: ""
     podSecurityContext:
       enabled: false
     service:
