Updated APP_INSIGHTS_API_BASE to properly render

--- a/charts/forms-flow-analytics/templates/configmap.yaml
+++ b/charts/forms-flow-analytics/templates/configmap.yaml
@@ -6,4 +6,4 @@ metadata:
     app: "{{ .Chart.Name }}"
   name: "{{ .Chart.Name }}"
 data:
-  REDASH_HOST: "{{ .Values.ingress.url }}"
+  REDASH_HOST: "{{ tpl .Values.ingress.hostname . }}"
