--- a/charts/forms-flow-analytics/values.yaml
+++ b/charts/forms-flow-analytics/values.yaml
@@ -1,6 +1,7 @@
 Domain: "apps.gitops.aot-technologies.com"
 ingress: 
-  enabled: true # create an ingress for this component 
+  enabled: true # create an ingress for this component
+  hostname: "{{.Chart.Name}}-{{.Release.Namespace}}.{{.Values.Domain}}"
   port: 5000
 
 postgresql:
