--- a/charts/forms-flow-ai/values.yaml
+++ b/charts/forms-flow-ai/values.yaml
@@ -1,18 +1,18 @@
 ---
-Domain: "apps.devops.aot-technologies.com"
+Domain: "apps.gitops.aot-technologies.com"
 websocket_encrypt_key: "FormsFlow.AI"
 forms-flow-analytics:
   ingress: 
     enabled: true
     tls: 
       hosts: 
-        - "apps.devops.aot-technologies.com"
+        - "apps.gitops.aot-technologies.com"
 forms-flow-bpm:
   ingress: 
     enabled: true 
     tls: 
       hosts: 
-        - "apps.devops.aot-technologies.com"
+        - "apps.gitops.aot-technologies.com"
   clientid: "forms-flow-bpm"
   clientsecret: "786001d6-68a8-4519-903c-bc5b5a870d68"
 forms-flow-forms:
@@ -20,7 +20,7 @@ forms-flow-forms:
     enabled: true # create an ingress for this component 
     tls: 
       hosts: 
-        - "apps.devops.aot-technologies.com"
+        - "apps.gitops.aot-technologies.com"
   admin:
     email: "me@defineme.com"
     password: "admin"
@@ -28,7 +28,7 @@ forms-flow-idm:
   keycloak:
     ingress:
       enabled: true
-      hostname: "forms-flow-idm-forms-flow-ai.apps.devops.aot-technologies.com"
+      hostname: "forms-flow-idm-cberg-test.apps.gitops.aot-technologies.com"
   realm: forms-flow-ai
 forms-flow-web:
   clientid: forms-flow-web
