--- a/charts/forms-flow-analytics/charts/redis-exporter/values.yaml
+++ b/charts/forms-flow-analytics/charts/redis-exporter/values.yaml
@@ -10,8 +10,8 @@ redis:
     tag: 7.0-rc3-alpine
 
 persistentVolumeClaim:
-  size: 2Gi # storage class name 
-  storageClass: nfs-client # pvc request size
+  size: 2Gi 
+  storageClass: ""
 resources:
   limits:
     cpu: 60m
