--- a/charts/forms-flow-analytics/values.yaml
+++ b/charts/forms-flow-analytics/values.yaml
@@ -45,8 +45,8 @@ redisExporter:
       repository: redis
       tag: 7.0-rc3-alpine
   persistentVolumeClaim:
-    size: 2Gi # storage class name 
-    storageClass: nfs-client # pvc request size
+    size: 2Gi  
+    storageClass: ""
   resources:
     limits:
       cpu: 60m
