--- a/charts/forms-flow-analytics/Chart.yaml
+++ b/charts/forms-flow-analytics/Chart.yaml
@@ -9,3 +9,4 @@ dependencies:
 name: forms-flow-analytics
 tags: forms-flow-analytics
 version: v1.0.0
+icon: "https://raw.githubusercontent.com/AOT-Technologies/forms-flow-ai/develop/.images/logo.png"
