--- a/charts/forms-flow-api/Chart.yaml
+++ b/charts/forms-flow-api/Chart.yaml
@@ -7,3 +7,4 @@ dependencies:
 name: forms-flow-api
 tags: forms-flow-api
 version: v1.0.0
+icon: "https://raw.githubusercontent.com/AOT-Technologies/forms-flow-ai/develop/.images/logo.png"
