--- a/charts/forms-flow-ai/Chart.yaml
+++ b/charts/forms-flow-ai/Chart.yaml
@@ -2,4 +2,4 @@
 apiVersion: v2
 name: forms-flow-ai
 version: v1.0.0
-icon: "https://github.com/cberg-aot/helm-charts/blob/gh-pages/icons/icon.large.png"
+icon: "https://raw.githubusercontent.com/AOT-Technologies/forms-flow-ai/develop/.images/logo.png"
