--- a/charts/forms-flow-idm/Chart.yaml
+++ b/charts/forms-flow-idm/Chart.yaml
@@ -6,3 +6,4 @@ dependencies:
   - name: keycloak
     version: 7.1.16
     repository: "https://charts.bitnami.com/bitnami"
+icon: "https://raw.githubusercontent.com/AOT-Technologies/forms-flow-ai/develop/.images/logo.png"
