--- a/charts/forms-flow-mongodb/Chart.yaml
+++ b/charts/forms-flow-mongodb/Chart.yaml
@@ -7,4 +7,4 @@ dependencies:
     repository: https://charts.bitnami.com/bitnami
     version: 11.1.10
 version: v1.0.0
-icon: "https://github.com/cberg-aot/helm-charts/blob/gh-pages/icons/icon.large.png"
+icon: "https://raw.githubusercontent.com/AOT-Technologies/forms-flow-ai/develop/.images/logo.png"
