--- a/charts/forms-flow-web/Chart.yaml
+++ b/charts/forms-flow-web/Chart.yaml
@@ -2,3 +2,4 @@
 apiVersion: v2
 name: forms-flow-web
 version: v1.0.0
+icon: "https://raw.githubusercontent.com/AOT-Technologies/forms-flow-ai/develop/.images/logo.png"
