--- a/charts/forms-flow-admin/templates/ingress.yaml
+++ b/charts/forms-flow-admin/templates/ingress.yaml
@@ -12,7 +12,7 @@ spec:
       host: "{{.Chart.Name}}-{{.Release.Namespace}}.{{.Values.Domain}}"
       http:
         paths:
-          - path: /
+          - path: {{ .Values.ingress.path }}
             pathType: Prefix
             backend:
               service:
