changed idm and ai to infer & template hosnames

--- a/charts/forms-flow-ai/values.yaml
+++ b/charts/forms-flow-ai/values.yaml
@@ -6,13 +6,13 @@ forms-flow-analytics:
     enabled: true
     tls: 
       hosts: 
-        - "apps.gitops.aot-technologies.com"
+        - "{{tpl .Values.Domain .}}"
 forms-flow-bpm:
   ingress: 
     enabled: true 
     tls: 
       hosts: 
-        - "apps.gitops.aot-technologies.com"
+        - "{{tpl .Values.Domain .}}"
   clientid: "forms-flow-bpm"
   clientsecret: "786001d6-68a8-4519-903c-bc5b5a870d68"
 forms-flow-forms:
@@ -20,7 +20,7 @@ forms-flow-forms:
     enabled: true # create an ingress for this component 
     tls: 
       hosts: 
-        - "apps.gitops.aot-technologies.com"
+        - "{{tpl .Values.Domain .}}"
   admin:
     email: "me@defineme.com"
     password: "admin"
@@ -28,7 +28,7 @@ forms-flow-idm:
   keycloak:
     ingress:
       enabled: true
-      hostname: "forms-flow-idm-cberg-test.apps.gitops.aot-technologies.com"
+      hostname: "forms-flow-idm-{{tpl .Release.Namespace .}}.{{tpl .Values.Domain .}}"
   realm: forms-flow-ai
 forms-flow-web:
   clientid: forms-flow-web
