--- a/charts/forms-flow-idm/values.yaml
+++ b/charts/forms-flow-idm/values.yaml
@@ -1,5 +1,5 @@
 ---
-Domain: "apps.gitops.aot-technologies.com"
+Domain: apps.gitops.aot-technologies.com
 keycloak:
   extraEnvVars: 
     - name: KEYCLOAK_ADMIN_USER
@@ -9,7 +9,7 @@ keycloak:
     - name: KEYCLOAK_PROXY_ADDRESS_FORWARDING
       value: "true"
     - name: KEYCLOAK_FRONTEND_URL
-      value: "https://{{tpl .Values.ingress.hostname .}}/auth"
+      value: "https://forms-flow-idm-{{tpl .Release.Namespace .}}.apps.gitops.aot-technologies.com/auth"
     - name: JAVA_OPTS
       value: >-
         -Dkeycloak.profile.feature.scripts=enabled
@@ -83,5 +83,6 @@ keycloak:
     enabled: true
     extraTls:
       - {}
+    hostname: #DEFINEME
     path: /auth
     pathType: Prefix
