Env var changes

--- a/charts/forms-flow-admin/templates/deployment.yaml
+++ b/charts/forms-flow-admin/templates/deployment.yaml
@@ -87,10 +87,10 @@ spec:
             secretKeyRef:
               key: REDASH_SECRET_KEY
               name: "{{ .Values.formsflow.analytics }}"
-        - name: CAMUNDA_API_URI
+        - name: BPM_API_URL
           valueFrom:
             configMapKeyRef:
-              key: CAMUNDA_API_URI
+              key: BPM_API_URL
               name: "{{ .Values.formsflow.configmap }}"
         - name: KEYCLOAK_ADMIN_CLIENT
           valueFrom:
@@ -117,6 +117,11 @@ spec:
             configMapKeyRef:
               key: FORMIO_URL
               name: "{{ .Values.formsflow.configmap }}"
+        - name: FORMIO_JWT_SECRET
+          valueFrom:
+            secretKeyRef:
+              key: FORMIO_JWT_SECRET
+              name: "{{ .Values.formsflow.secret }}"
         - name: FORMSFLOW_ADMIN_API_CORS_ORIGINS
           value: '*'
         image: "{{ .Values.image.registry }}/{{ .Values.image.repository }}:{{ .Values.image.tag }}"
