--- a/charts/forms-flow-web/templates/configmap.yaml
+++ b/charts/forms-flow-web/templates/configmap.yaml
@@ -39,7 +39,7 @@ data:
         "REACT_APP_USER_RESOURCE_FORM_ID": "${REACT_APP_USER_RESOURCE_FORM_ID}",
         "REACT_APP_API_SERVER_URL": "${REACT_APP_API_SERVER_URL}",
         "REACT_APP_API_PROJECT_URL": "${REACT_APP_API_PROJECT_URL}", 
-        "REACT_APP_CAMUNDA_API_URI": "${REACT_APP_CAMUNDA_API_URI}", 
+        "REACT_APP_BPM_URL": "${REACT_APP_BPM_URL}", 
         "REACT_APP_KEYCLOAK_CLIENT": "${REACT_APP_KEYCLOAK_CLIENT}", 
         "REACT_APP_WEB_BASE_URL": "${REACT_APP_WEB_BASE_URL}", 
         "REACT_APP_ANONYMOUS_ID": "${REACT_APP_ANONYMOUS_ID}", 
