Changes to env vars

--- a/charts/forms-flow-web/templates/configmap.yaml
+++ b/charts/forms-flow-web/templates/configmap.yaml
@@ -33,6 +33,8 @@ data:
         "REACT_APP_APPLICATION_NAME": "${REACT_APP_APPLICATION_NAME}",
         "REACT_APP_USER_ACCESS_PERMISSIONS": "${REACT_APP_USER_ACCESS_PERMISSIONS}",
         "REACT_APP_MT_ADMIN_BASE_URL": "${REACT_APP_MT_ADMIN_BASE_URL}",
-        "REACT_APP_MT_ADMIN_BASE_URL_VERSION": "v1"
+        "REACT_APP_MT_ADMIN_BASE_URL_VERSION": "v1",
+        "REACT_APP_MULTI_TENANCY_ENABLED": "${REACT_APP_MULTI_TENANCY_ENABLED}",
+        "REACT_APP_KEYCLOAK_ENABLE_CLIENT_AUTH": "${REACT_APP_KEYCLOAK_ENABLE_CLIENT_AUTH}"
 
       }
