--- a/charts/forms-flow-bpm/templates/configmap.yaml
+++ b/charts/forms-flow-bpm/templates/configmap.yaml
@@ -1,7 +1,7 @@
 ---
 apiVersion: v1
 data:
-  APP_SECURITY_ORIGIN: "*.{{ .Values.Domain }}"
+  APP_SECURITY_ORIGIN: "*"
   CAMUNDA_ANALYTICS_DATABASE_SERVICE_NAME: "{{ .Values.camunda.analytics.database }}"
   CAMUNDA_APP_ROOT_LOG_FLAG: "{{ .Values.camunda.logLevel }}"
   CAMUNDA_AUTHORIZATION_FLAG: "{{ .Values.camunda.auth.enabled }}"
